# weed_vision

./: .gitignore  CMakeLists.txt  package.xml
launch/: bag.launch.py
rviz/: rviz.rviz
weed_vision/scripts/: model.py
